[tool.poetry]
name = "head-first-design-patterns"
version = "0.1.0"
description = ""
authors = ["LaiLeeHan <allen@profetai.com>"]
readme = "README.md"
packages = [{include = "head_first_design_patterns"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
